[package]
name = "portage_repo"
version = "0.1.0"
authors = ["Kent Fredric <kentnl@gentoo.org>"]
edition = "2018"
description = "A low-level interface for working with Gentoo portage repositories"
license = "Artistic-1.0 OR GPL-2.0-or-later"
repository = "https://github.com/kentfredric/portage_repo.git"
exclude = ["/target/doc/**", "/.gitignore", "/.cargo/**", "/util/**"]
keywords = ["gentoo", "portage", "repository" ]
categories = ["filesystem"]
readme = "src/lib.md"

[dependencies]

[features]
default  = []
nightly = ["external_doc"]
external_doc = []

[package.metadata.docs.rs]
features = [ "nightly" ]

[lib]
name = "portage_repo"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[[example]]
name = "repo-info"
doc = true
